--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
+body {
+    background: #282c34;
+}
+
+h1 {
+    color: azure;
+}
+
+a {
+    color: #ccc;
+    text-decoration: none;
+}
+
+a:hover {
+    color: violet;
+}
+
+input {
+    margin-top: 15px;
+    height: 35px;
+}
+
+input:focus,
+button:focus {
+    outline: none;
+}
+
+label input {
+    border: black 2px solid;
+}
+
+.button,
+button {
+    background: grey;
+    border: none;
+    font-weight: bold;
+    margin-right: 5px;
+}
+
+span {
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+li {
+    list-style: none;
+    color: thistle;
+    font-size: 17px;
+    font-weight: bolder;
+}
+
+button {
+    height: 25px;
+    margin-top: 10px;
+}
+
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
